(lang dune 2.9)

(name src)

(generate_opam_files true)

(source
 (github lykimq/ocaml_ex))

(authors "Ly Kim Quyen")

(maintainers "Ly Kim Quyen")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name src)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
